[package]
name = "breakout"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
path = "../../bevy"
default-features = false
features = [
  "std",
  "async_executor",
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_debug_stepping",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "wayland",
]
